--- a/RecipeNest/RecipeNest.csproj
+++ b/RecipeNest/RecipeNest.csproj
@@ -74,6 +74,7 @@
 		<PackageReference Include="SQLiteNetExtensions" Version="2.1.0" />
 		<PackageReference Include="SQLiteNetExtensions.Async" Version="2.1.0" />
 		<PackageReference Include="Tesseract" Version="5.2.0" />
+		<PackageReference Include="TesseractOcrMaui" Version="1.2.0" />
 	</ItemGroup>
 
 	<ItemGroup>
